src/graph/snapshots/hopr_api__graph__function__tests__return_first_edge_negative_when_empty.snap
---
source: src/graph/function.rs
expression: "ValueResult\n{ observations: obs, initial_value: 1.0, path_index: 0, result_value: cost }"
---
observations:
  immediate: ~
  intermediate: ~
initial_value: 1
path_index: 0
result_value: -1
