src/graph/snapshots/hopr_api__graph__function__tests__return_intermediate_edge_positive_when_capacity_only_no_probes.snap
---
source: src/graph/function.rs
expression: "ValueResult\n{ observations: obs, initial_value: 1.0, path_index: 1, result_value: cost }"
---
observations:
  immediate: ~
  intermediate:
    balance: "1000"
    score: ~
initial_value: 1
path_index: 1
result_value: 0.5
