src/graph/snapshots/hopr_api__graph__function__tests__return_last_edge_positive_when_connected_with_empty_intermediate.snap
---
source: src/graph/function.rs
expression: "ValueResult\n{ observations: obs, initial_value: 1.0, path_index: 1, result_value: cost }"
---
observations:
  immediate:
    connected: true
    score: 0.95
    ack_rate: 0.9
  intermediate:
    balance: ~
    score: 0
initial_value: 1
path_index: 1
result_value: 0.855
