src/graph/snapshots/hopr_api__graph__function__tests__return_last_edge_rejected_when_ack_rate_below_threshold.snap
---
source: src/graph/function.rs
expression: "ValueResult\n{ observations: obs, initial_value: 1.0, path_index: 1, result_value: cost }"
---
observations:
  immediate:
    connected: true
    score: 0.95
    ack_rate: 0.05
  intermediate:
    balance: "1000"
    score: 0.95
initial_value: 1
path_index: 1
result_value: -0.95
