src/graph/snapshots/hopr_api__graph__function__tests__return_last_edge_requires_connectivity.snap
---
source: src/graph/function.rs
expression: "ValueResult\n{\n    observations: obs_conn, initial_value: 1.0, path_index: 1, result_value:\n    cost_connected\n}"
---
observations:
  immediate:
    connected: true
    score: 0.95
    ack_rate: 0.9
  intermediate:
    balance: "1000"
    score: 0.95
initial_value: 1
path_index: 1
result_value: 0.855
